# python-video-service

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 94336ce222d7_initial_schema_video_workflow_step.py
app/: config.py  db.py  main.py  models.py
app/api/: health.py
app/pipeline/: align_segment_tags.py  chunk_summary.py  consolidate.py  domain.py  domain_types.py  gaps.py  media.py  merge_other.py  openai_client.py  prompts.py  reassign_other.py  tag.py  thumbnails.py  transcribe.py  types.py  usage.py  vision.py
app/schemas/: base.py  extraction.py
app/services/: extraction_response.py
app/storage/: __init__.py  azure.py  base.py  parse_url.py  s3.py
app/worker/: celery_app.py  pipeline.py  steps.py  tasks.py
docs/: API.md  parity-run-2026-07-20-python-response.json  parity-run-2026-07-20.md
docs/specs/: 2026-07-19-python-video-service-design.md
tests/: test_auth.py  test_chunk_summary.py  test_contract.py  test_domain.py  test_domain_types.py  test_error_envelope.py  test_extraction_response.py  test_health.py  test_media.py  test_media_range_reads.py  test_models.py  test_node_parity.py  test_openai_client.py  test_parse_storage_url.py  test_pipeline_pure.py  test_pipeline_run.py  test_prompt_parity.py  test_steps.py  test_storage.py  test_tag.py  test_tasks.py  test_thumbnails.py  test_transcribe.py  test_upload.py  test_usage.py  test_video_extraction.py  test_vision.py
tests/fixtures/: node_extraction_response.json  (+1 more)
(+3 files in other folders)
