[project]
name = "python-video-service"
version = "0.1.0"
description = "Internal video extraction service — Python port of the Node/Next.js service"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "celery[redis]>=5.4",
    "redis>=5.2",
    "openai>=1.57",
    "azure-storage-blob>=12.24",
    "boto3>=1.35",
    "httpx>=0.28",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# `Depends(...)` in a signature default is FastAPI's dependency-injection
# idiom, not the mutable-default bug B008 is designed to catch.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Header", "fastapi.Query"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
